# zoopolis-www

./: .gitignore  .gitlab-ci.yml  README.md  docker.just
ansible/: justfile
backend/: .dockerignore  Dockerfile  Pipfile  justfile  pyproject.toml  requirements.txt
backend/api/: admin.py  models.py  urls.py
backend/api/account/: serializers.py  urls.py  views.py
backend/api/auth/: serializers.py  views.py
backend/api/main/: serializers.py  views.py
backend/api/migrations/: 0001_initial.py  0002_userprofile_account_type_and_more.py  0003_userprofile_privacy_accepted.py  0004_userprofile_address_userprofile_city.py  0005_userprofile_imageurl.py  0006_registerqrcode.py  0007_registerqrcode_is_printed.py  0008_registerqrcode_pet.py  0009_alter_registerqrcode_options_and_more.py  0010_alter_userprofile_account_type.py  0011_remove_userprofile_imageurl_userprofile_image.py  0012_registerqrcode_activation_date.py  0013_userprofile_telegram_id.py  0014_alter_userprofile_privacy_accepted.py  0015_alter_registerqrcode_id.py  0016_registerqrcode_verification_code.py  0017_remove_registerqrcode_verification_code_and_more.py
backend/api/oauth/: serializers.py  urls.py  views.py
backend/api/utils/: CDNService.py  QRGenerator.py  cookiesSetter.py  decorators.py  generate_qr_register.py  imageHandler.py  jwt_cookie_authentication.py  oauthCodeVerifier.py  redisClient.py  smsProvider.py  smsVerification.py  verificationCodeGenerator.py
backend/base/: settings.py  urls.py
backend/dictionaries/: admin.py  apps.py  models.py
backend/sitemanagement/: admin.py  models.py
(+228 files in other folders)
